# export_pkg

./: README.md  pyproject.toml  requirements.txt
src/export_ease.egg-info/: PKG-INFO
src/exports_from_api/: comtrade.py
src/exports_from_api_pcd15.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/exportsgalore/: imf.py
test/: example.py
tests/: comtrade_total_exports_2021A.csv  comtrade_total_exports_2021M.csv  example.py  imf_FR_all_exports_2021A.csv  imf_FR_all_exports_2021M.csv
